# CM7-DSP

./: CM7.cmake  CMakeLists.txt  LICENSE  README.md  Vagrantfile  build.sh  notes.md
inc/: core.h  dsp_adc.h  main.h  stm32f7xx_hal_conf.h
src/: core.cc  dsp_adc.cc  handlers.c  main.c  main.cc  stm32f7xx_hal_msp.c
tools/: connect.gdb  launch_gdb.sh  openocd_connect.sh
